Added Text Extraction

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-\PythonBackend\.idea
-\PythonBackend\Sample.pdf
-\PythonBackend\output
+PythonBackend/.idea
+PythonBackend/output
+PythonBackend/Sample.pdf
